--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,18 @@
 .widget-background {
   background-color: var(--background-secondary);
 }
+
+.widget-button {
+  padding: 3px 6px;
+  margin: 3px;
+}
+
+.widget-icon {
+  width: 20px;
+  height: 20px;
+  fill: var(--text-muted);
+}
+
+.widget-icon:hover {
+  fill: var(--text-normal);
+}
