--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,9 @@
 }
 
 .widget-button {
-  padding: 3px 6px;
+  padding: 3px 4px;
   margin: 3px;
+  background-color: Transparent;
 }
 
 .widget-icon {
@@ -15,4 +16,15 @@
 
 .widget-icon:hover {
   fill: var(--text-normal);
+}
+
+.widget-button-close {
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+.widget-icon-close {
+  width: 15px;
+  height: 15px;
 }
